src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_TwoTargetTypesInStyle.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<DockPanel xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
    <DockPanel.Resources>
            <Style TargetType="Button">                
                <Style.TargetType><x:Type TypeName="ListBox" /></Style.TargetType>
                <Setter Property="Background" Value="Red" />       
	     </Style>    
    </DockPanel.Resources>
    
    <Button />
</DockPanel>
</Page>
